# cuark

./: .gitignore  CMakeLists.txt  bunfig.toml  conanfile.py  custom-clang-and-import-std.md  homebrew-output.md  package.json
.cuark/: ConanLibImports.cmake  EarlyConfig.cmake  Extras.cmake  TheBasics.cmake  wrapper-gxx
src/: main.cpp
src/core/: CMakeLists.txt  config.cpp  config.cppm  files.cpp  files.cppm  handlers.cpp  handlers.cppm  images.cpp  images.cppm  quitting.cppm  setup.cpp  setup.cppm  transpile.cppm  tunes.cpp  tunes.cppm  web.cppm  websocket.cpp  websocket.cppm
src/core/include/: config.hpp  files.hpp  handlers.hpp  setup.hpp  tunes.hpp
src/core/test/: CMakeLists.txt  config_test.cpp  files_test.cpp  handlers_test.cpp  images_test.cpp  web_test.cpp
src/ipc/: CMakeLists.txt  CommonTypes.cppm  CommonTypes.hpp  CrowSupport.cppm  json_pickling.hpp
src/ipc/test/: json_test.cpp
src/tools/: CMakeLists.txt  base64.cppm  file_tools.cpp  file_tools.cppm  range_tools.cppm  text_tools.cppm  tuple_hash.cppm
src/tools/include/: file_tools.hpp  os.hpp  range_tools.hpp  text_tools.hpp
src/tools/os/: linux.cpp  linux.cppm  macos.cpp  macos.cppm  windows.cpp  windows.cppm
src/tools/test/: tools_testing.cpp
web/: Utils.ts  frontend.tsx
web/Shared/: CommonTypes.ts  CuarkDefs.ts  Definitions.ts
web/Tools/: Ipc.ts  Utilities.tsx
web/UI/: App.tsx
web/UI/Dialogs/: FolderChooser.tsx
web/UI/Dialogs/styles/: folder-chooser.css
web/UI/Views/: Settings.tsx  Tools.tsx
